--- a/lab2/facebook/index.html
+++ b/lab2/facebook/index.html
@@ -7,19 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="intro">
-        <h1 class="logo">facebook</h1>
-        <p class="text">Facebook помогает вам всегда<br> оставаться на связи и общаться со <br>своими знакомыми.</p>
+    <div class="container">
+        <div class="intro">
+            <h1 class="logo">facebook</h1>
+            <p class="text">Facebook помогает вам всегда<br> оставаться на связи и общаться со <br>своими знакомыми.</p>
+        </div>
+
+        <div class="login">
+            <form class="form">
+                <input type="text" placeholder="Электронный адрес или номер телефона" class="email">
+                <input type="password" placeholder="Пароль" class="password">
+                <button type="submit" class="enter">Вход</button>
+                <button class="forgotpass">Забыли пароль?</button>
+                <hr class="line">
+                <button class="newacc">Создать новый аккаунт</button>
+            </form>
+            <p class="page"><b>Создать страницу</b> знаменитости, музыкальной группы<br> или компании.</p> 
+        </div>
     </div>
 
-    <div class="login">
-        <form class="form">
-            <input type="text" placeholder="Электронный адрес или номер телефона" class="email" required>
-            <input type="password" placeholder="Пароль" class="password" required>
-            <button type="submit" class="enter">Вход</button>
-            <button type="button" class="forgotpass">Забыли пароль?</button>
-            <hr>
-            <button class="newacc">Создать новый аккаунт</button>
-        </form>
-    </div>    
+</body>
+</html>
 
