--- a/lab2/github/index.html
+++ b/lab2/github/index.html
@@ -2,9 +2,106 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Github</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="first">
+                <a href="https://github.com"><img src="logo.png" alt="Github Logo" class="logo"></a></li>
+                <a href="#" class="menu">Platform</a>
+                <a href="#" class="menu">Solutions</a>
+                <a href="#" class="menu">Resources</a>
+                <a href="#" class="menu">Open source</a>
+                <a href="#" class="menu">Enterprise</a>
+                <a href="#" class="menu">Pricing</a>
+            </div>
+            <div class="second">
+                <form>
+                    <input class="search" type="text" placeholder="Search or jump to...">
+                </form>
+                    <button class="signin" type="submit">Sign in</button>
+                    <button class="signup" type="submit">Sign up</button>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <h1 class="intro">Try the Copilot-powered platform</h1>
+        <p class="text1">We get it, there's a lot you can do with GitHub. That's why we've packed all of it into a single risk free
+         trial that includes GitHub Enterprise,<br> Copilot, and Advanced Security.
+        </p>
+        <button class="btn">Start free for 30 days</button>
+
+        <div class="price">
+            <div class="free">
+                <h2 class="free-t">Free</h2>
+                <p class="bio">The basics for individuals<br> and organizations</p>
+                <h3 class="amount"><sup class="dol">$</sup>0<span class="usd">USD <sup class="per">per user/month</sup></span></h3>
+                <button class="btn2">Join for free</button>
+                <ul>
+                    <li>Unlimited public/private repositories</li>
+                    <li>Dependabot security and version updates</li>
+                    <li>2,000 CI/USD minutes/month</li>
+                    <li>500MB of Packages storage</li>
+                    <li>Issues & Projects</li>
+                    <li>Community support</li>
+                </ul>
+                <p class="feat">FEATURED ADD-ONS</p>
+                <ul class="tre">
+                    <li>GitHub Copilot Access</li>
+                    <li>GitHub Codespaces Access</li>
+                </ul>    
+            </div>
+
+
+            <div class="team">
+                <h2 class="free-t">Team</h2>
+                <p class="bio">Advanced collaboration for<br> individuals and organizations</p>
+                <h3 class="amount"><sup class="dol">$</sup>4<span class="usd">USD <sup class="per">per user/month</sup></span></h3>
+                <button class="btn1">Continue with Team</button>
+                <ul>
+                    <li>Everything in Free, plus...</li>
+                    <li>Access to GitHub Codespaces</li>
+                    <li>Repository rules</li>
+                    <li>Multiple reviewers in pull requests</li>
+                    <li>Draft pull requests</li>
+                    <li>Code owners</li>
+                    <li>Required reviewers</li>
+                    <li>Pages and Wikis</li>
+                    <li>Environment deployment branches and secrets</li>
+                    <li>3,000 CI/USD minutes/month</li>
+                    <li>2GB of Packages storage</li>
+                    <li>Web-based support</li>
+                </ul>
+            </div>
+ 
+            
+            <div class="enterprise">
+                <h2 class="free-t">Enterprise</h2>
+                <p class="bio">Security, compliance,<br> and flexible deployment</p>
+                <button class="strt">Starting at</button>
+                <h3 class="amount"><sup class="dol">$</sup>21<span class="usd">USD <sup class="per">per user/month</sup></span></h3>
+                <div class="btns"><button class="btn3">Start a free trial</button>
+                <button class="btn4">Contact Sales</button></div>
+                <ul>
+                    <li>Everything included in Team, plus...</li>
+                    <li>Data residency</li>
+                    <li>Enterprise Managed Users</li>
+                    <li>User provisioning through SCIM</li>
+                    <li>Enterprise Account to centrally manage multiple organizations</li>
+                    <li>Environment protection rules</li>
+                    <li>Repository rules</li>
+                    <li>Audit Log API</li>
+                    <li>SOC1, SOC2, type 2 reports anually</li>
+                    <li>FedRAMP Tailored Authority to Operate (ATO)</li>
+                    <li>SAML single sign-on</li>
+                    <li>Advanced auditing</li>
+                    <li>GitHub Connect</li>
+                </ul>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
