--- a/lab2/github/index.html
+++ b/lab2/github/index.html
@@ -79,6 +79,7 @@
  
             
             <div class="enterprise">
+                <span class="recom">RECOMMENDED</span>
                 <h2 class="free-t">Enterprise</h2>
                 <p class="bio">Security, compliance,<br> and flexible deployment</p>
                 <button class="strt">Starting at</button>
